# PicTag

./: .gitignore  README.md  manage.py  pyproject.toml
backend/PicTag/: asgi.py  settings.py  urls.py  wsgi.py
backend/PicTag/templates/: base.html
backend/images/: admin.py  models.py  urls.py  views.py
backend/images/migrations/: 0001_initial.py  0002_auto_20211115_0107.py
backend/images/static/css/: style.css
backend/images/static/js/: autocomplete.js
backend/images/templates/image/: image_list.html
backend/images/templates/images/: image_detail.html  image_list.html  image_upload.html
backend/images/templates/images/includes/: tags_sidebar.html
backend/users/: urls.py  views.py
backend/users/templates/users/: login.html  profile.html  registration.html
